/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package cu.datys.patterns.gof.structural.composite.component;

import java.awt.Graphics;

/**
 *
 * @author alexander.escalona
 */
public interface IComponent {
    void draw(Graphics g);
}
